[metadata]
name = beancount-inout
version = 0.1.0
description = Time Tracker for Beancount
long_description = file: README.md
long_description_content_type = text/markdown
author = Nils Werner
author_email = nils@hey.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
project_urls =
    Source = https://github.com/nils-werner/beancount-inout

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    beancount
    click

[options.entry_points]
console_scripts =
    bean-inout=beancount_inout:inout

[bdist_wheel]
universal = 1
